# advent-of-code-golang

./: .gitignore  BUILD  README.md  WORKSPACE  deps.bzl  go.mod
2021/: Makefile
2021/day1/: BUILD.bazel  day1.go
2021/day10/: BUILD.bazel
2021/day11/: BUILD.bazel  go.mod
2021/day12/: BUILD.bazel
2021/day13/: BUILD.bazel  day13.go
2021/day14/: BUILD.bazel  day14.go
2021/day15/: BUILD.bazel  day15.go  go.mod
2021/day17/: BUILD.bazel  day17.go
2021/day2/: BUILD.bazel  day2.go
2021/day3/: BUILD.bazel
2021/day4/: BUILD.bazel  day4.go
2021/day5/: BUILD.bazel  day5.go
2021/day6/: BUILD.bazel  day6.go
2021/day7/: BUILD.bazel
2021/day8/: BUILD.bazel  segment_Display.txt
2021/day9/: BUILD.bazel
2022/day1/: BUILD.bazel  day1.go
2022/day2/: BUILD.bazel  day2.go
2022/day3/: BUILD.bazel  day3.go
2022/day4/: BUILD.bazel  day4.go
2022/day5/: BUILD.bazel  day5.go
2022/day6/: BUILD.bazel  day6.go
day1/: day1.go  go.mod  test.go
day10/: day10.go
day11/: day11.go
day12/: day12.go
day13/: day13.go
day14/: day14.go  go.mod
day15/: day15.go
day17/: day17.go  go.mod
day3/: day3.go
day4/: go.mod
day5/: go.mod
day6/: go.mod
day7/: day7.go  go.mod
day8/: day8.go
day9/: day9.go
