load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "day1_lib",
    srcs = ["day1.go"],
    data = ["day1.txt"],
    importpath = "github.com/clashthebunny/advent-of-code-golang/2021/day1",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "day1",
    embed = [":day1_lib"],
    visibility = ["//visibility:public"],
)
