load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "day10_lib",
    srcs = ["day10.go"],
    importpath = "github.com/clashthebunny/advent-of-code-golang/2021/day10",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "day10",
    embed = [":day10_lib"],
    visibility = ["//visibility:public"],
)
