load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "day13_lib",
    srcs = ["day13.go"],
    importpath = "github.com/clashthebunny/advent-of-code-golang/2021/day13",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "day13",
    embed = [":day13_lib"],
    visibility = ["//visibility:public"],
)
