load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "day14_lib",
    srcs = ["day14.go"],
    data = [
        "day14.txt",
        "day14_ex1.txt",
    ],
    importpath = "github.com/clashthebunny/advent-of-code-golang/2021/day14",
    visibility = ["//visibility:private"],
    deps = ["@com_github_docopt_docopt_go//:docopt-go"],
)

go_binary(
    name = "day14",
    embed = [":day14_lib"],
    visibility = ["//visibility:public"],
)
