load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "day9_lib",
    srcs = ["day9.go"],
    importpath = "github.com/clashthebunny/advent-of-code-golang/2021/day9",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "day9",
    embed = [":day9_lib"],
    visibility = ["//visibility:public"],
)
