load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "day2_lib",
    srcs = ["day2.go"],
    data = [
        "day2.txt",
        "day2_ex.txt",
    ],
    importpath = "github.com/clashthebunny/advent-of-code-golang/2022/day2",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "day2",
    embed = [":day2_lib"],
    visibility = ["//visibility:public"],
)
