load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "day3_lib",
    srcs = ["day3.go"],
    data = [
        "day3.txt",
        "day3_ex.txt",
    ],
    importpath = "github.com/clashthebunny/advent-of-code-golang/2022/day3",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "day3",
    embed = [":day3_lib"],
    visibility = ["//visibility:public"],
)
